Finalizando Anuncio Interstitial e indicador de localização.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ android {
 }
 
 final androidVersion = '26.0.2'
+def butterKnifeVersion = '8.8.1'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -54,7 +55,8 @@ dependencies {
     compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
     freeCompile 'com.google.android.gms:play-services-ads:11.8.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
-
+    compile "com.jakewharton:butterknife:$butterKnifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
